--- a/inst/DUEshiny/www/DUE_vignette.Rmd
+++ b/inst/DUEshiny/www/DUE_vignette.Rmd
@@ -110,10 +110,44 @@ The groups in the mixture might differ by differences in pharmacokinetics, affec
 print(getwd())
 print(dir())
 knitr::read_chunk(system.file(package='DUE', 'doc/DUE_vignette_plottingFunctions.R'))
+
 ```
 ```{r plottingFunctions}
-plotThresholdInVignette=function(x){}
-plotEUprobsInVignette=function(x){}
+envHolder = new.env()
+getExampleFile = function(string) {
+  dirString = ifelse(basename(getwd()) == "www", '../', '../inst/DUEshiny/')
+  filename = paste0(dirString,  rev(grep(value=TRUE, string,
+                                         dir(dirString)))[1]) 
+  if(class(filename) == 'try-error') {
+    cat("file not found ", string, "\n")
+    print(getwd())
+    print(dir())
+  }
+  filename
+}
+
+plotThresholdInVignette= function(string) {
+  filename = getExampleFile(string) 
+  if(class(filename) != 'try-error') {
+    load(filename, envir = envHolder)
+    rt.outcome.colors = envHolder$rt.outcome.colors
+    try({
+      plotThresholdContour(theDUEenv = envHolder$DUEsaving, context='vignette')
+      mtext(side = 3, string, cex=1)
+    })
+  }
+}
+plotEUprobsInVignette= function(string) {
+  filename = getExampleFile(string) 
+  if(class(filename) != 'try-error') {
+    load(filename, envir = envHolder)
+    rt.outcome.colors = envHolder$rt.outcome.colors
+    try({
+      plotProbsAndEU(DUEenv = envHolder$DUEsaving, context='vignette')
+      mtext(side = 3, string, cex=1)
+    })
+  }
+}
 ```
 
 ```{r fig.height=4, fig.width=8}
