--- a/inst/DUEshiny/www/DUE_vignette.Rmd
+++ b/inst/DUEshiny/www/DUE_vignette.Rmd
@@ -23,42 +23,9 @@ knitr::opts_chunk$set(
 <!-- Check out http://rmarkdown.rstudio.com/authoring_pandoc_markdown.html 
 http://pandoc.org/MANUAL.html https://yihui.name/knitr/options/
 -->
-```{r plottingFunctions}
-envHolder = new.env()
-getExampleFile = function(string) {
-  dirString = ifelse(basename(getwd()) == "www", '../', '../inst/DUEshiny/')
-  filename = paste0(dirString,  rev(grep(value=TRUE, string,
-                                         dir(dirString)))[1]) 
-  if(class(filename) == 'try-error') {
-    cat("file not found ", string, "\n")
-    print(getwd())
-    print(dir())
-  }
-  filename
-}
+```{r plottingFunctionsInclude}
+source("DUE_vignette_plottingFunctions.R")
 
-plotThresholdInVignette= function(string) {
-  filename = getExampleFile(string) 
-  if(class(filename) != 'try-error') {
-    load(filename, envir = envHolder)
-    rt.outcome.colors = envHolder$rt.outcome.colors
-    try({
-      plotThresholdContour(theDUEenv = envHolder$DUEsaving, context='vignette')
-      mtext(side = 3, string, cex=1)
-    })
-  }
-}
-plotEUprobsInVignette= function(string) {
-  filename = getExampleFile(string) 
-  if(class(filename) != 'try-error') {
-    load(filename, envir = envHolder)
-    rt.outcome.colors = envHolder$rt.outcome.colors
-    try({
-      plotProbsAndEU(DUEenv = envHolder$DUEsaving, context='vignette')
-      mtext(side = 3, string, cex=1)
-    })
-  }
-}
 ```
 
 ### Introduction
@@ -228,7 +195,7 @@ $This\ group\ \#$
  If the click closer to the diagonal than any mode, then dose corresponding to the closest diagonal point (the geometric mean) becomes the new  
 $Selected\ dose$.
 
-The $Selected\ dose$, whether selected by clikcing or by entering into the $Selected\ dose$ input, will divide the graph into four quadrants, corresponding to four outcomes: 
+The $Selected\ dose$, whether selected by clicking or by entering into the $Selected\ dose$ input, will divide the graph into four quadrants, corresponding to four outcomes: 
 
 * $rt\ \ $:  neither response nor toxicity
 * $rT\ $: only toxicity
@@ -267,8 +234,8 @@ The scale/text pairs on the lower right specify the utility values for these fou
 
  All four of these utilities set $U_{rt}=0$, since $rt$ is the outcome without any treatment (dose = 0).
 
- The $Simple$ utility assignment values only the 
-$Rt$  outcome, and sets the other three to zero.
+ The $Simple$ utility assignment considers  only the 
+$Rt$  outcome to be valuable, with utility value = 1, and sets the other three utility values to zero.
  It is commonly used in studies of Phase I and II clinical trial designs. It expresses the idea that only $Rt$ is a worthy outcome. But it equates $rt$ with $rT$, as if toxicity is no concern unless $R$ is achieved.
 
  The other three utility assignments all penalize the outcome $rT$ with a utility of -1. They differ in the valuation of the $RT$ outcome:
