--- a/inst/DUEshiny/www/DUE_vignette.Rmd
+++ b/inst/DUEshiny/www/DUE_vignette.Rmd
@@ -297,6 +297,22 @@ In this ideal situation, there is a fairly sharp peak in the expected utility EU
 
 Lowering the median value $\mu_{T} = 100$ to equal $\mu_{R}$, then toxicity is highly likely, response less so. In that case, the utility choice has profound effects. Only the `Simple` utility shows a local EU peak at 100. With the `Additive` utility, the EU curve is flat. A 3+3 phase I trial on 7 tiers logarithmically spaced from 50 to 200, would stop at tier 100, with maximum tolerated dose (MTD) = 79.4 with probability 72%. 
 
+## Is  Pr(toxicity) =  33% a good proxy for optimal expected utility?
+
+In this figure, the "T" curve is made visible, for comparison with the EU curve. The optimal dose is roughly the same as the dose at which the probability of toxicity is 33%.
+
+![ . ](EU-is-at-T=0.33-additive.png){ width=50% }
+
+The venerable "3+3" Phase I design is sometimes described as aiming to estimate the dose tier closest to Pr(toxicity) =  33%. To rationalize this in vague terms, lowering the dose might decrease the response probability too much, while raising it would of course increase the risk, and possibly entail "response limiting events" that would mask or make irrelevant an increase in response rate.
+
+The utility function in the figure is "Additive". At the other three default utility functions, here are the comparable curves:
+
+SIMPLE          |                CAUTIOUS                 |           AGGRESSIVE
+----------------|-------------------------------------------|-------------------
+![ . ](EU-is-at-T=0.33-simple.png){ width=90% } | ![ . ](EU-lower-than-T=0.33-cautious.png){ width=90% } | ![ . ](EU-is-above-T=0.33-aggressive.png){ width=90% } 
+
+Changing the utility values to the simple scheme, which credits only the outcome `Rt`, does not change the optimum dose, but enhances its optimality. The cautious assignment lowers the optimal dose somewhat. The aggressive assignment sends it all the way to the maximum dose on the scale.
+
 
 ## Effect of multimodality
 
