Moving DUE_vignette_plottingFunctions.R into R folder.

--- a/inst/doc/DUE_vignette.Rmd
+++ b/inst/doc/DUE_vignette.Rmd
@@ -26,8 +26,8 @@ http://pandoc.org/MANUAL.html https://yihui.name/knitr/options/
 
 
 ```{r plottingFunctionsInclude}
-source("../inst/doc/DUE_vignette_plottingFunctions.R")
-
+#source("../inst/doc/DUE_vignette_plottingFunctions.R")
+#  Moved to R folder.
 ```
 
 ### Introduction
