--- a/inst/doc/DUE_vignette.Rmd
+++ b/inst/doc/DUE_vignette.Rmd
@@ -268,7 +268,7 @@ On the upper right side of the window is a graph showing these probabilities
  (left-side scale) and expected utilities (right-side scale).
  The vertical green line corresponds to the 
 $Selected\ dose$ indicated by the green cross in the contour plot.
- The black dotted vertical line picks out the dose maximizing expected utility, whih we can label $OptDose$ for short. 
+ The black dotted vertical line picks out the dose maximizing expected utility, which we can label $OptDose$ for short. 
  
 The horizontal red line shows the dose corresponding to $Pr(T) = 1/3$. This dose we will call the TRUE "$MTD$" (MTD = "maximum tolerated dose"), since in some views this would ideally be the best dose to report forward for further study, if one could somehow identify it without doing an experiment at all. The idea is that a dose should be sufficiently toxic reflecting potential for enough activity to counterbalance the risk, but not so toxic as to be unusable. Below we explore how suitable this rule of thumb is, under what circumstances. The traditional Phase I trial generally produces a MTD intended to estimate the true MTD. 
  
@@ -280,13 +280,13 @@ The eight boxes at the top of the graph are three-way toggles, which
 
 To the right of the plot is a table of quantities of interest for the current plot. They include:
 
-  -highest.EU,
-  -OptDose.EU,
-  -EUatMTDdose,
-  -MTDdose,
-  -lowest.EU,
-  -highest.Rt,
-  -best.dose.Rt,
+* highest.EU,
+* OptDose.EU,
+* EUatMTDdose,
+* MTDdose,
+* lowest.EU,
+* highest.Rt,
+* best.dose.Rt.
 
 ### *Other features of the interface*
 
@@ -335,11 +335,12 @@ SIMPLE          |                CAUTIOUS                 |           AGGRESSIVE
 ----------------|-------------------------------------------|-------------------
 ![ . ](EU-is-at-T=0.33-simple.png){ width=90% } | ![ . ](EU-lower-than-T=0.33-cautious.png){ width=90% } | ![ . ](EU-is-above-T=0.33-aggressive.png){ width=90% } 
 
-Changing the utility values to the simple scheme, which credits only the outcome `Rt`, does not change the optimum dose, but enhances its optimality. The cautious assignment lowers the optimal dose somewhat. The aggressive assignment sends it all the way to the maximum dose on the scale. From here on we stick with the additive utility assignment. Certainly a user can explore different values of RT and rT if desired, with reference to the desired outcome $Rt$ assigned utility of 1. A response is no cure, but a toxicity is no fun.
+Changing the utility values to the simple scheme, which credits only the outcome `Rt`, does not change the optimum dose, but enhances its optimality. The cautious assignment lowers the optimal dose somewhat. The aggressive assignment sends it all the way to the maximum dose on the scale. From here on we stick with the additive utility assignment. Certainly a user can explore different values of $U_{RT}$ and $U_{rT}$ if desired, with reference to the desired outcome $Rt$ assigned utility of 1. A response is no cure, but a toxicity is no fun.
 
 ### Effect of the correlation
 
-See the discussion above about interpretation of the correlation between the thresholds $\theta_{R}$ and $\theta_{T}$. As we move the correlation from zero to one, 
+See the discussion above about interpretation of the correlation between the thresholds $\theta_{R}$ and $\theta_{T}$. As we move the correlation from zero to one,  
+with this model the EU curve does not change.  This is not generally true, only  
 
 ## Effect of multimodality
 
