--- a/inst/DUEshiny/DUE explorations.Rmd
+++ b/inst/DUEshiny/DUE explorations.Rmd
@@ -11,7 +11,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r echo=FALSE}
-  load("inst/DUEshiny/DUEsaved##------ 2017-07-26 17:20:29 ------##small_CV_no_refractory.rdata")
-  utilityChoices = 
+load(paste0("inst/DUEshiny/DUEsaved##",
+            "------ 2017-07-26 17:20:29",
+            "------##small_CV_no_refractory.rdata"))
+#  utilityChoices = 
 ```
 
